crates/ridl-backend-ts/src/snapshots/ridl_backend_ts__tests__array_of_tuple_init_parenthesizes_the_arrow_body.snap
---
source: crates/ridl-backend-ts/src/tests.rs
expression: source
---
/**
 * Vehicle speed over ground
 *
 * @unit km/h
 * @range [0.0..250.0 step 0.5]
 */
export type Speed = number & { readonly __ridl: 'veh.common.Speed' };

export function initSpeed(): Speed {
  return 0.0 as Speed;
}

export interface SpanTable {
  range: { min: Speed; max: Speed };
  /**
   * @bounds 2
   */
  spans: readonly { min: Speed; max: Speed }[];
}

export function initSpanTable(): SpanTable {
  return {
    range: { min: initSpeed(), max: initSpeed() },
    spans: Array.from({ length: 2 }, () => ({ min: initSpeed(), max: initSpeed() })),
  };
}
