crates/ridl-backend-ts/src/snapshots/ridl_backend_ts__tests__bounded_map.snap
---
source: crates/ridl-backend-ts/src/tests.rs
expression: source
---
/**
 * Vehicle speed over ground
 *
 * @unit km/h
 * @range [0.0..250.0 step 0.5]
 */
export type Speed = number & { readonly __ridl: 'veh.common.Speed' };

export function initSpeed(): Speed {
  return 0.0 as Speed;
}

export type Counter = number & { readonly __ridl: 'veh.common.Counter' };

export function initCounter(): Counter {
  return 0 as Counter;
}

export interface Table {
  /**
   * @bounds 0..32
   */
  meta: ReadonlyArray<readonly [Counter, Speed]>;
}

export function initTable(): Table {
  return {
    meta: [],
  };
}
