crates/ridl-backend-ts/src/snapshots/ridl_backend_ts__tests__enumset_u64_width_brands_bigint.snap
---
source: crates/ridl-backend-ts/src/tests.rs
expression: source
---
export type WideFlags = bigint & { readonly __ridl: 'veh.common.WideFlags' };

export const WideFlagsBits = {
  LOW: 1n,
  TOP: 9223372036854775808n,
} as const;

export function initWideFlags(): WideFlags {
  return 0n as WideFlags;
}
