crates/ridl-backend-ts/src/snapshots/ridl_backend_ts__tests__init_functions_derive_recursively.snap
---
source: crates/ridl-backend-ts/src/tests.rs
expression: source
---
/**
 * Vehicle speed over ground
 *
 * @unit km/h
 * @range [0.0..250.0 step 0.5]
 */
export type Speed = number & { readonly __ridl: 'veh.common.Speed' };

export function initSpeed(): Speed {
  return 0.0 as Speed;
}

export interface Inner {
  speed: Speed;
}

export function initInner(): Inner {
  return {
    speed: initSpeed(),
  };
}

export interface Outer {
  inner: Inner;
}

export function initOuter(): Outer {
  return {
    inner: initInner(),
  };
}
